--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ plugins {
 android {
     signingConfigs {
         release {
-            storeFile file('.signing/rockstars.jks')
+            storeFile file('../.signing/rockstars.jks')
             storePassword '123456'
             keyAlias 'rockstars'
             keyPassword '123456'
@@ -21,7 +21,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.mx.terryrockstar.myapplication"
+        applicationId "com.mx.terryrockstar.lactaguia"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
@@ -55,10 +55,6 @@ android {
             multiDexEnabled true
         }
     }
-    buildTypes.each {
-        it.buildConfigField 'String', 'DATABASE_NAME', "\"$DBNAME\""
-        it.buildConfigField 'String', 'CONF', "\"$CONF\""
-    }
     testOptions.unitTests.all {
         testLogging {
             events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
@@ -88,13 +84,11 @@ dependencies {
     /* androidX */
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation "androidx.fragment:fragment-ktx:1.2.5"
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.legacy:legacy-support-core-utils:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'androidx.palette:palette-ktx:1.0.0'
 
     /* Firebase Api*/
     /*implementation platform('com.google.firebase:firebase-bom:25.12.0')
@@ -107,20 +101,8 @@ dependencies {
 
     /* Libraries */
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.google.guava:guava:30.0-jre'
-    implementation 'com.squareup.picasso:picasso:2.71828'
-
-    /* server */
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
 
     /* Testing*/
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    androidTestImplementation "org.mockito:mockito-core:3.6.0"
-    androidTestImplementation "androidx.navigation:navigation-testing:2.3.2"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1"
-    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1"
 }
